--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist (commented out for Render deployment - build folder needed)
 
 # Gatsby files
 .cache/
